fix uneven image spacing

--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,10 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
 }
 .portfolio .horiz-list div {
   max-width: 500px;
-   padding: 10px 20px;
+  padding: 10px 20px;
   border-radius: 4px;
 }
 
